Rebase for JDK 11